Увеличены таймауты для сервера
